[gd_scene load_steps=8 format=3 uid="uid://dtq8ecyqf4oug"]

[ext_resource type="Script" uid="uid://07nblf3a4jcq" path="res://Scripts/Upgrades/upgrade_panel.gd" id="1_gersm"]
[ext_resource type="Texture2D" uid="uid://ca5vysmpmgspt" path="res://icon.svg" id="1_lev6e"]
[ext_resource type="Shader" uid="uid://rat80rvydcla" path="res://Shaders/spining_lines.gdshader" id="2_8kbbg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8kbbg"]
shader = ExtResource("2_8kbbg")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/stripes = 24
shader_parameter/speed = 0.30000000447036
shader_parameter/direction = 1
shader_parameter/stripe_colors = PackedColorArray(0, 0.899768, 0.81697303, 1, 0.18, 0.5079999, 1, 0, 0.9878457, 0.62131655, 0.39577827, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/color_count = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lev6e"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8o43"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.42745098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ql3a"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 5

[node name="Upgrade Panel" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gersm")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8kbbg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -591.0
offset_top = -460.0
offset_right = 591.0
offset_bottom = 460.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lev6e")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.0
offset_top = 39.000046
offset_right = 207.0
offset_bottom = 106.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42
text = "LEVEL UP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrades" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.0
offset_top = -270.0
offset_right = 435.0
offset_bottom = 326.34003
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Upgrade1" type="Button" parent="Panel/Upgrades"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_x8o43")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ql3a")

[node name="Icon" type="TextureRect" parent="Panel/Upgrades/Upgrade1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -57.5
offset_right = 124.0
offset_bottom = 57.5
grow_vertical = 2
texture = ExtResource("1_lev6e")
expand_mode = 1

[node name="Titre" type="Label" parent="Panel/Upgrades/Upgrade1"]
layout_mode = 0
offset_left = 140.0
offset_top = 9.0
offset_right = 180.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 24
text = "Titre"

[node name="Description" type="Label" parent="Panel/Upgrades/Upgrade1"]
layout_mode = 0
offset_left = 140.0
offset_top = 44.86
offset_right = 639.0
offset_bottom = 117.33003
text = "Ici, description"
autowrap_mode = 2

[node name="Upgrade2" type="Button" parent="Panel/Upgrades"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_x8o43")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ql3a")

[node name="Icon" type="TextureRect" parent="Panel/Upgrades/Upgrade2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -57.5
offset_right = 124.0
offset_bottom = 57.5
grow_vertical = 2
texture = ExtResource("1_lev6e")
expand_mode = 1

[node name="Titre" type="Label" parent="Panel/Upgrades/Upgrade2"]
layout_mode = 0
offset_left = 140.0
offset_top = 9.0
offset_right = 180.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 24
text = "Titre"

[node name="Description" type="Label" parent="Panel/Upgrades/Upgrade2"]
layout_mode = 0
offset_left = 140.0
offset_top = 44.86
offset_right = 639.0
offset_bottom = 117.33003
text = "Ici, description"
autowrap_mode = 2

[node name="Upgrade3" type="Button" parent="Panel/Upgrades"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_x8o43")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ql3a")

[node name="Icon" type="TextureRect" parent="Panel/Upgrades/Upgrade3"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -57.5
offset_right = 124.0
offset_bottom = 57.5
grow_vertical = 2
texture = ExtResource("1_lev6e")
expand_mode = 1

[node name="Titre" type="Label" parent="Panel/Upgrades/Upgrade3"]
layout_mode = 0
offset_left = 140.0
offset_top = 9.0
offset_right = 180.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 24
text = "Titre"

[node name="Description" type="Label" parent="Panel/Upgrades/Upgrade3"]
layout_mode = 0
offset_left = 140.0
offset_top = 44.86
offset_right = 639.0
offset_bottom = 117.33003
text = "Ici, description"
autowrap_mode = 2

[connection signal="pressed" from="Panel/Upgrades/Upgrade1" to="." method="_on_upgrade_1_pressed"]
[connection signal="pressed" from="Panel/Upgrades/Upgrade2" to="." method="_on_upgrade_2_pressed"]
[connection signal="pressed" from="Panel/Upgrades/Upgrade3" to="." method="_on_upgrade_3_pressed"]
